--- a/backup/武汉三镇旅游指南（3日游推荐）.md
+++ b/backup/武汉三镇旅游指南（3日游推荐）.md
@@ -1,46 +1,8 @@
 <html>
 <body>
-<!--StartFragment--><h1>1. 引言</h1>
-<p>当春风轻拂江城，樱花如雪般飘落，武汉即将迎来了它一年中最美的时节。天初暖，日初长，人间四月好春光。在这座汇聚了千年历史与现代繁华的城市里，长江与汉水交汇，黄鹤楼与古琴台遥相呼应。无论是漫步在东湖畔的绿荫大道，还是穿梭于户部巷的美食小巷，每一处都散发着独特的韵味和生机。让我们一同走进这座充满故事的城市，感受它的历史脉络、自然美景与人文风情，在这美好的季节里留下难忘的记忆。</p>
-<h2>2. 行程规划</h2>
+<!--StartFragment-->
 
-日期 | 地点 | 备注
--- | -- | --
-Day1 | 武汉站 | 🚄到达
-  | 湖北省博物馆 | 🚗/🚇
-  | 东湖磨山 | 🚗/🚲
-  | 东湖梨园 | 🚲/🚗
-  | 昙华林附近酒店 | 🚗
-Day2 | 昙华林 | 🚶‍♀️/🚲/🚗
-  | 粮道街 | 🍽️
-  | 黄鹤楼 | 🚶‍♀️/🚲/🚗
-  | 长江大桥 | 🚶‍♀️/🚗
-  | 中华路码头 | 🚢
-  | 武汉关码头 | 🚢
-  | 江汉路 | 🚗
-  | 咸安坊 | 🚶‍♀️
-  | 巴公房子 | 🚶‍♀️
-  | 黎黄陂路 | 🚶‍♀️
-  | 山海关路 | 🚶‍♀️
-  | 宋庆龄汉口旧居纪念馆 | 🚶‍♀️
-  | 汉口江滩 | 🚶‍♀️
-Day3 | 钟家村 | 🚶‍♀️
-  | 圣母堂广场 | 🚶‍♀️
-  | 归元禅寺 | 🚶‍♀️
-  | 古琴台 | 🚶‍♀️
-  | 龟山风景区 | 🚶‍♀️
-  | 晴川阁 | 🚶‍♀️
-  | 鹦鹉洲大桥 | 🚶‍♀️
-  | 拦江路 | 🍽️
-
-
-<h2>四、其他</h2>
-<p>以上的大致安排，个人感觉是比较紧凑的，将武汉三镇分割为3天的游玩~ 如时间充沛可以适当调整~</p>
-<p>Created by ZENGQHAO | © 2025</p>
-<p>Updated by 20250331</p>
-<!-- notionvc: 62b24020-97bf-4596-9ddd-1f1756baeed1 --><!--EndFragment-->
-</body>
-</html># 1. 引言
+## 1. 引言
 
 当春风轻拂江城，樱花如雪般飘落，武汉即将迎来了它一年中最美的时节。天初暖，日初长，人间四月好春光。在这座汇聚了千年历史与现代繁华的城市里，长江与汉水交汇，黄鹤楼与古琴台遥相呼应。无论是漫步在东湖畔的绿荫大道，还是穿梭于户部巷的美食小巷，每一处都散发着独特的韵味和生机。让我们一同走进这座充满故事的城市，感受它的历史脉络、自然美景与人文风情，在这美好的季节里留下难忘的记忆。
 
@@ -102,7 +64,7 @@ Day3 | 钟家村 | 🚶‍♀️
 ![](https://wp-cdn.4ce.cn/v2/0szsdnc.png)
 
 | 地点 | 交通工具 | 备注 |
-| --- | --- | --- |
+| ------------ | ------ | ------------ |
 | 武汉站 | 高铁 |  |
 | 湖北省博物馆 | 地铁/打车 | 需要提前微信公众号“湖北省博物馆”预约公众号提前5天0点放票，开放09:00-17:00(周一闭馆);推荐路线:越王勾践剑展厅➡️曾侯乙展厅➡️曾世家展厅➡️楚国八百年展厅➡️梁庄王珍藏展厅➡️编钟演出编钟演奏:门票50r，工作日11:30、14:0015:00共3场，周末及节假日增加一场10:30，每场0.5h |
 | 湖北省美术馆 | 步行 | 各种美术展，有兴趣的话可以看看 |
@@ -121,14 +83,14 @@ Day3 | 钟家村 | 🚶‍♀️
 ![](https://wp-cdn.4ce.cn/v2/klDIq4t.png)
 
 | 地点 | 交通工具 | 备注 |
-| --- | --- | --- |
+| ------------ | ------ | ------------ |
 | 昙华林 | 步行 | 文艺街区 |
 | 粮道街 | 步行 | 体验武汉过早文化，推荐 赵师傅油饼包烧麦、三镇民生甜食馆等等 |
 | 黄鹤楼 | 步行 | 2025春晚分会场之一，打卡点:红墙机位、火车机位 |
 | 长江大桥 | 步行 | 武汉地标之一，不想上去的话，在中华路码头附近拍照也是可以的，桥上也是有黄鹤楼拍照机位 |
 | 中华路码头 | 轮渡 | 轮渡 费用2元 |
 | 武汉关码头 | 轮渡 | 轮渡 费用2元 |
-| 江汉关 | 步行 | 每日按时敲钟，按刻奏乐，报时曲为《[[威斯敏斯特钟声](https://baike.baidu.com/item/%E5%A8%81%E6%96%AF%E6%95%8F%E6%96%AF%E7%89%B9%E9%92%9F%E5%A3%B0/19396905?fromModule=lemma_inlink)](https://baike.baidu.com/item/%E5%A8%81%E6%96%AF%E6%95%8F%E6%96%AF%E7%89%B9%E9%92%9F%E5%A3%B0/19396905?fromModule=lemma_inlink)》。钟楼顶置风向标，设瞭望台。江汉关大楼融合了欧洲[[文艺复兴时期](https://baike.baidu.com/item/%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4%E6%97%B6%E6%9C%9F/4583552?fromModule=lemma_inlink)](https://baike.baidu.com/item/%E6%96%87%E8%89%BA%E5%A4%8D%E5%85%B4%E6%97%B6%E6%9C%9F/4583552?fromModule=lemma_inlink)的建筑风格和英国钟楼建筑形式，具有重要的历史价值和建筑艺术价值，一度成为汉口城市的标志。 |
+| 江汉关 | 步行 | 每日按时敲钟，按刻奏乐，报时曲为《[[威斯敏斯特钟声])》。钟楼顶置风向标，设瞭望台。江汉关大楼融合了欧洲文艺复兴时期的建筑风格和英国钟楼建筑形式，具有重要的历史价值和建筑艺术价值，一度成为汉口城市的标志。 |
 | 江汉路步行街 | 步行 | 简称“江汉路”，据说是“天下第一步行街”，这里是游客最多最热闹的地方! |
 | 水塔小吃街 | 步行 | 各种武汉本地小吃和各地网红小吃集结地 |
 | 咸安坊 | 步行 | 旧厂房翻新景点，值得附近走走看看 |
@@ -146,7 +108,7 @@ Day3 | 钟家村 | 🚶‍♀️
 ![](https://wp-cdn.4ce.cn/v2/zn6AMYQ.png)
 
 | 地点 | 交通工具 | 备注 |
-| --- | --- | --- |
+| ------------ | ------ | ------------ |
 | 钟家村 | 地铁/打车 | 喜欢烟火气可以早起可以去西大街过早，钟家村地铁站出来步行600米，推荐：豆皮大王、秘制糊汤粉、老奶奶的糯米包油条 |
 | 圣母堂广场 | 共享单车/步行 | 距离钟家村400米，欧式风格建筑，有很多有意思的咖啡厅，很适合拍照。 |
 | 归元禅寺 | 共享单车/步行 | 距离圣母堂广场500米，门票10元，入寺可免费领3只香，一定数罗汉，数完后可以花20买一张相对应的罗汉牌，网上都能搜到相对应的签文，别去花钱解签了。 |
