--- a/backup/武汉三镇旅游指南（3日游推荐）.md
+++ b/backup/武汉三镇旅游指南（3日游推荐）.md
@@ -8,34 +8,43 @@
 
 ## 2. 行程规划
 
-| 日期 | 地点 | 备注 |
-| --- | --- | --- |
-| Day1 | 武汉站 | 🚄到达 |
-|  | 湖北省博物馆 | 🚗/🚇 |
-|  | 东湖磨山 | 🚗/🚲 |
-|  | 东湖梨园 | 🚲/🚗 |
-|   | 昙华林附近酒店 | 🚗 |
-| Day2 | 昙华林 | 🚶‍♀️/🚲/🚗 |
-|  | 粮道街 | 🍽️ |
-|  | 黄鹤楼 | 🚶‍♀️/🚲/🚗 |
-|  | 长江大桥 | 🚶‍♀️/🚗 |
-|  | 中华路码头 | 🚢 |
-|  | 武汉关码头 | 🚢 |
-|  | 江汉路 | 🚗 |
-|  | 咸安坊 | 🚶‍♀️ |
-|  | 巴公房子 | 🚶‍♀️ |
-|  | 黎黄陂路 | 🚶‍♀️ |
-|  | 山海关路 | 🚶‍♀️ |
-|  | 宋庆龄汉口旧居纪念馆 | 🚶‍♀️ |
-|  | 汉口江滩 | 🚶‍♀️ |
-| Day3 | 钟家村 | 🚶‍♀️ |
-|  | 圣母堂广场 | 🚶‍♀️ |
-|  | 归元禅寺 | 🚶‍♀️ |
-|  | 古琴台 | 🚶‍♀️ |
-|  | 龟山风景区 | 🚶‍♀️ |
-|  | 晴川阁 | 🚶‍♀️ |
-|  | 鹦鹉洲大桥 | 🚶‍♀️ |
-|  | 拦江路 | 🍽️ |
+<table style="width: 100%; table-layout: fixed;">
+  <thead>
+    <tr style="background-color: #f5f5f5;">
+      <th style="width: 15%; text-align: center; padding: 8px; border: 1px solid #ddd;">日期</th>
+      <th style="width: 35%; text-align: center; padding: 8px; border: 1px solid #ddd;">地点</th>
+      <th style="width: 50%; text-align: center; padding: 8px; border: 1px solid #ddd;">备注</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">Day1</td><td style="padding: 8px; border: 1px solid #ddd;">武汉站</td><td style="padding: 8px; border: 1px solid #ddd;">🚄到达</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">湖北省博物馆</td><td style="padding: 8px; border: 1px solid #ddd;">🚗/🚇</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">东湖磨山</td><td style="padding: 8px; border: 1px solid #ddd;">🚗/🚲</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">东湖梨园</td><td style="padding: 8px; border: 1px solid #ddd;">🚲/🚗</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">昙华林附近酒店</td><td style="padding: 8px; border: 1px solid #ddd;">🚗</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">Day2</td><td style="padding: 8px; border: 1px solid #ddd;">昙华林</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️/🚲/🚗</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">粮道街</td><td style="padding: 8px; border: 1px solid #ddd;">🍽️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">黄鹤楼</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️/🚲/🚗</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">长江大桥</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️/🚗</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">中华路码头</td><td style="padding: 8px; border: 1px solid #ddd;">🚢</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">武汉关码头</td><td style="padding: 8px; border: 1px solid #ddd;">🚢</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">江汉路</td><td style="padding: 8px; border: 1px solid #ddd;">🚗</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">咸安坊</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">巴公房子</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">黎黄陂路</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">山海关路</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">宋庆龄汉口旧居纪念馆</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">汉口江滩</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">Day3</td><td style="padding: 8px; border: 1px solid #ddd;">钟家村</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">圣母堂广场</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">归元禅寺</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">古琴台</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">龟山风景区</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">晴川阁</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">鹦鹉洲大桥</td><td style="padding: 8px; border: 1px solid #ddd;">🚶‍♀️</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;"></td><td style="padding: 8px; border: 1px solid #ddd;">拦江路</td><td style="padding: 8px; border: 1px solid #ddd;">🍽️</td></tr>
+  </tbody>
+</table>
 
 ## 3、出发前的准备
 
@@ -63,18 +72,26 @@
 
 ![](https://wp-cdn.4ce.cn/v2/0szsdnc.png)
 
-| 地点 | 交通工具 | 备注 |
-| ------------ | ------ | ------------ |
-| 武汉站 | 高铁 |  |
-| 湖北省博物馆 | 地铁/打车 | 需要提前微信公众号“湖北省博物馆”预约公众号提前5天0点放票，开放09:00-17:00(周一闭馆);推荐路线:越王勾践剑展厅➡️曾侯乙展厅➡️曾世家展厅➡️楚国八百年展厅➡️梁庄王珍藏展厅➡️编钟演出编钟演奏:门票50r，工作日11:30、14:0015:00共3场，周末及节假日增加一场10:30，每场0.5h |
-| 湖北省美术馆 | 步行 | 各种美术展，有兴趣的话可以看看 |
-| 凌波门 | 共享单车/打车 | 去磨山的路上可以看看东湖边的岸边景色 |
-| 东湖磨山植物园
-（东湖樱园） | 共享单车/打车 | 主打一个看樱花，目前门票收费60/人 |
-| 东湖磨山 | 共享单车/步行 | 东湖磨山南门👉映霞桥👉杜鹃园👉千帆亭👉自然之谜遗址👉林间探微👉楚雄编钟👉楚城👉经过索道下站👉回到磨山南门门票免费，索道40(往返70)滑道35(下行);徒步到山顶30min |
-| 东湖绿道 | 共享单车/步行 | 东湖之眼粉色摩天轮，门票30，不同组合套票价格不一样，比如:欢乐丛林+东湖之眼绿道CityWalk：东湖之眼➡️湖光阁码头➡️东湖沙滩➡️氦气球➡️彩虹桥➡️九女墩➡️梨园 |
-| 东湖梨园 | 共享单车/步行 | 从磨山到梨园出口后 东湖之行就此结束了 |
-| 昙华林附近酒店 | 打车 | 建议酒店定在附近，方便第二天的旅行游玩 |
+<table style="width: 100%; table-layout: fixed;">
+  <thead>
+    <tr style="background-color: #f5f5f5;">
+      <th style="width: 30%; text-align: center; padding: 8px; border: 1px solid #ddd;">地点</th>
+      <th style="width: 20%; text-align: center; padding: 8px; border: 1px solid #ddd;">交通工具</th>
+      <th style="width: 50%; text-align: left; padding: 8px; border: 1px solid #ddd;">备注</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">武汉站</td><td style="padding: 8px; border: 1px solid #ddd;">高铁</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;"></td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">湖北省博物馆</td><td style="padding: 8px; border: 1px solid #ddd;">地铁/打车</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">需要提前微信公众号“湖北省博物馆”预约公众号提前5天0点放票，开放09:00-17:00(周一闭馆);推荐路线:越王勾践剑展厅➡️曾侯乙展厅➡️曾世家展厅➡️楚国八百年展厅➡️梁庄王珍藏展厅➡️编钟演出编钟演奏:门票50r，工作日11:30、14:0015:00共3场，周末及节假日增加一场10:30，每场0.5h</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">湖北省美术馆</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">各种美术展，有兴趣的话可以看看</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">凌波门</td><td style="padding: 8px; border: 1px solid #ddd;">共享单车/打车</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">去磨山的路上可以看看东湖边的岸边景色</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">东湖磨山植物园（东湖樱园）</td><td style="padding: 8px; border: 1px solid #ddd;">共享单车/打车</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">主打一个看樱花，目前门票收费60/人</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">东湖磨山</td><td style="padding: 8px; border: 1px solid #ddd;">共享单车/步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">东湖磨山南门👉映霞桥👉杜鹃园👉千帆亭👉自然之谜遗址👉林间探微👉楚雄编钟👉楚城👉经过索道下站👉回到磨山南门门票免费，索道40(往返70)滑道35(下行);徒步到山顶30min</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">东湖绿道</td><td style="padding: 8px; border: 1px solid #ddd;">共享单车/步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">东湖之眼粉色摩天轮，门票30，不同组合套票价格不一样，比如:欢乐丛林+东湖之眼绿道CityWalk：东湖之眼➡️湖光阁码头➡️东湖沙滩➡️氦气球➡️彩虹桥➡️九女墩➡️梨园</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">东湖梨园</td><td style="padding: 8px; border: 1px solid #ddd;">共享单车/步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">从磨山到梨园出口后 东湖之行就此结束了</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">昙华林附近酒店</td><td style="padding: 8px; border: 1px solid #ddd;">打车</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">建议酒店定在附近，方便第二天的旅行游玩</td></tr>
+  </tbody>
+</table>
 
 ---
 
@@ -82,24 +99,33 @@
 
 ![](https://wp-cdn.4ce.cn/v2/klDIq4t.png)
 
-| 地点 | 交通工具 | 备注 |
-| ------------ | ------ | ------------ |
-| 昙华林 | 步行 | 文艺街区 |
-| 粮道街 | 步行 | 体验武汉过早文化，推荐 赵师傅油饼包烧麦、三镇民生甜食馆等等 |
-| 黄鹤楼 | 步行 | 2025春晚分会场之一，打卡点:红墙机位、火车机位 |
-| 长江大桥 | 步行 | 武汉地标之一，不想上去的话，在中华路码头附近拍照也是可以的，桥上也是有黄鹤楼拍照机位 |
-| 中华路码头 | 轮渡 | 轮渡 费用2元 |
-| 武汉关码头 | 轮渡 | 轮渡 费用2元 |
-| 江汉关 | 步行 | 每日按时敲钟，按刻奏乐，报时曲为《[[威斯敏斯特钟声])》。钟楼顶置风向标，设瞭望台。江汉关大楼融合了欧洲文艺复兴时期的建筑风格和英国钟楼建筑形式，具有重要的历史价值和建筑艺术价值，一度成为汉口城市的标志。 |
-| 江汉路步行街 | 步行 | 简称“江汉路”，据说是“天下第一步行街”，这里是游客最多最热闹的地方! |
-| 水塔小吃街 | 步行 | 各种武汉本地小吃和各地网红小吃集结地 |
-| 咸安坊 | 步行 | 旧厂房翻新景点，值得附近走走看看 |
-| 巴公房子 | 步行 | 汉口CityWalk天花板，感受武汉租借区建筑，不输上海！ |
-| 黎黄陂路 | 步行 | CityWalk路线之一 |
-| 山海关路 | 步行 | 武汉数一数二的美食街，这里有四大天王:李记鸡冠饺(排队半小时)、汪记鲜鱼糊汤粉(武汉糊汤粉的龙头)，双黄牛肉面馆(每一碗都是现炒)，毛氏汽水包(排队半小时);注意:中午之后很多店面就会关门! |
-| 武汉天地 | 步行 | 武汉房价最贵地段之一，有很多洋房和出片点 |
-| 汉口江滩 | 步行 | 长江沿线堤坝，很长一段，可以看武昌天际线风景 |
-| 江汉路附近酒店 | 步行/打车 |  |
+<table style="width: 100%; table-layout: fixed;">
+  <thead>
+    <tr style="background-color: #f5f5f5;">
+      <th style="width: 30%; text-align: center; padding: 8px; border: 1px solid #ddd;">地点</th>
+      <th style="width: 20%; text-align: center; padding: 8px; border: 1px solid #ddd;">交通工具</th>
+      <th style="width: 50%; text-align: left; padding: 8px; border: 1px solid #ddd;">备注</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">昙华林</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">文艺街区</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">粮道街</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">体验武汉过早文化，推荐 赵师傅油饼包烧麦、三镇民生甜食馆等等</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">黄鹤楼</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">2025春晚分会场之一，打卡点:红墙机位、火车机位</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">长江大桥</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">武汉地标之一，不想上去的话，在中华路码头附近拍照也是可以的，桥上也是有黄鹤楼拍照机位</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">中华路码头</td><td style="padding: 8px; border: 1px solid #ddd;">轮渡</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">轮渡 费用2元</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">武汉关码头</td><td style="padding: 8px; border: 1px solid #ddd;">轮渡</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">轮渡 费用2元</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">江汉关</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">每日按时敲钟，按刻奏乐，报时曲为《威斯敏斯特钟声》。钟楼顶置风向标，设瞭望台。江汉关大楼融合了欧洲文艺复兴时期的建筑风格和英国钟楼建筑形式，具有重要的历史价值和建筑艺术价值，一度成为汉口城市的标志。</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">江汉路步行街</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">简称“江汉路”，据说是“天下第一步行街”，这里是游客最多最热闹的地方!</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">水塔小吃街</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">各种武汉本地小吃和各地网红小吃集结地</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">咸安坊</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">旧厂房翻新景点，值得附近走走看看</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">巴公房子</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">汉口CityWalk天花板，感受武汉租借区建筑，不输上海！</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">黎黄陂路</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">CityWalk路线之一</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">山海关路</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">武汉数一数二的美食街，这里有四大天王:李记鸡冠饺(排队半小时)、汪记鲜鱼糊汤粉(武汉糊汤粉的龙头)，双黄牛肉面馆(每一碗都是现炒)，毛氏汽水包(排队半小时);注意:中午之后很多店面就会关门!</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">武汉天地</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">武汉房价最贵地段之一，有很多洋房和出片点</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">汉口江滩</td><td style="padding: 8px; border: 1px solid #ddd;">步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">长江沿线堤坝，很长一段，可以看武昌天际线风景</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">江汉路附近酒店</td><td style="padding: 8px; border: 1px solid #ddd;">步行/打车</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;"></td></tr>
+  </tbody>
+</table>
 
 ---
 
@@ -107,16 +133,25 @@
 
 ![](https://wp-cdn.4ce.cn/v2/zn6AMYQ.png)
 
-| 地点 | 交通工具 | 备注 |
-| ------------ | ------ | ------------ |
-| 钟家村 | 地铁/打车 | 喜欢烟火气可以早起可以去西大街过早，钟家村地铁站出来步行600米，推荐：豆皮大王、秘制糊汤粉、老奶奶的糯米包油条 |
-| 圣母堂广场 | 共享单车/步行 | 距离钟家村400米，欧式风格建筑，有很多有意思的咖啡厅，很适合拍照。 |
-| 归元禅寺 | 共享单车/步行 | 距离圣母堂广场500米，门票10元，入寺可免费领3只香，一定数罗汉，数完后可以花20买一张相对应的罗汉牌，网上都能搜到相对应的签文，别去花钱解签了。 |
-| 古琴台 | 地铁 | 4号线至汉阳火车站D口 / 6号线至琴台站C口 无门票需预约，周一闭馆。附近推荐：琴台美术馆，汉阳造 |
-| 龟山风景区 | 地铁 | 6号线琴台站A口出来步行1.2公里左右到达龟山公园北门推荐游玩路线：龟山公园北门—状元亭—桂月亭—高山仰止—蝴蝶泉—龟山电视塔—可以从任意门出去10分钟就能爬上山顶，沿着山脊步道一路闲逛有很多可以打卡点，可以近距离接触龟山塔、俯瞰长江、遥望黄鹤楼，古今同框的机位在蝴蝶泉。 |
-| 晴川阁 | 打车/共享单车/步行 | 再沿龟山北路骑车/打车十几分钟至晴川大道 （周一闭馆不要跑空）为纪念大禹治水而建的古建筑，名字是由崔颢诗里‘晴川历历汉阳树’而来，相较于对岸的黄鹤楼这里真的很静谧，从晴川阁里面可以登上铁门关。 |
-| 鹦鹉洲大桥 | 共享单车/步行 | 红色桥身非常富有生命力，誉为武汉版“金门大桥”，随便就能拍出大片。 |
-| 拦江路 | 地铁/打车/共享单车/步行 | 晚上吃饭可以来，烧烤、蟹神、路边摊小吃非常有烟火气！ |
+<table style="width: 100%; table-layout: fixed;">
+  <thead>
+    <tr style="background-color: #f5f5f5;">
+      <th style="width: 30%; text-align: center; padding: 8px; border: 1px solid #ddd;">地点</th>
+      <th style="width: 20%; text-align: center; padding: 8px; border: 1px solid #ddd;">交通工具</th>
+      <th style="width: 50%; text-align: left; padding: 8px; border: 1px solid #ddd;">备注</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">钟家村</td><td style="padding: 8px; border: 1px solid #ddd;">地铁/打车</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">喜欢烟火气可以早起可以去西大街过早，钟家村地铁站出来步行600米，推荐：豆皮大王、秘制糊汤粉、老奶奶的糯米包油条</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">圣母堂广场</td><td style="padding: 8px; border: 1px solid #ddd;">共享单车/步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">距离钟家村400米，欧式风格建筑，有很多有意思的咖啡厅，很适合拍照。</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">归元禅寺</td><td style="padding: 8px; border: 1px solid #ddd;">共享单车/步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">距离圣母堂广场500米，门票10元，入寺可免费领3只香，一定数罗汉，数完后可以花20买一张相对应的罗汉牌，网上都能搜到相对应的签文，别去花钱解签了。</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">古琴台</td><td style="padding: 8px; border: 1px solid #ddd;">地铁</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">4号线至汉阳火车站D口 / 6号线至琴台站C口 无门票需预约，周一闭馆。附近推荐：琴台美术馆，汉阳造</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">龟山风景区</td><td style="padding: 8px; border: 1px solid #ddd;">地铁</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">6号线琴台站A口出来步行1.2公里左右到达龟山公园北门推荐游玩路线：龟山公园北门—状元亭—桂月亭—高山仰止—蝴蝶泉—龟山电视塔—可以从任意门出去10分钟就能爬上山顶，沿着山脊步道一路闲逛有很多可以打卡点，可以近距离接触龟山塔、俯瞰长江、遥望黄鹤楼，古今同框的机位在蝴蝶泉。</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">晴川阁</td><td style="padding: 8px; border: 1px solid #ddd;">打车/共享单车/步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">再沿龟山北路骑车/打车十几分钟至晴川大道 （周一闭馆不要跑空）为纪念大禹治水而建的古建筑，名字是由崔颢诗里‘晴川历历汉阳树’而来，相较于对岸的黄鹤楼这里真的很静谧，从晴川阁里面可以登上铁门关。</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">鹦鹉洲大桥</td><td style="padding: 8px; border: 1px solid #ddd;">共享单车/步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">红色桥身非常富有生命力，誉为武汉版“金门大桥”，随便就能拍出大片。</td></tr>
+    <tr><td style="padding: 8px; border: 1px solid #ddd;">拦江路</td><td style="padding: 8px; border: 1px solid #ddd;">地铁/打车/共享单车/步行</td><td style="padding: 8px; border: 1px solid #ddd; word-wrap: break-word;">晚上吃饭可以来，烧烤、蟹神、路边摊小吃非常有烟火气！</td></tr>
+  </tbody>
+</table>
 
 ## 四、其他
 
@@ -125,3 +160,5 @@
 Created by ZENGQHAO | © 2025
 
 Updated by 20250331
+</body>
+</html>
